--- a/typescript/ts-side/package.json
+++ b/typescript/ts-side/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.4.2",
