--- a/typescript/study-array-map/package.json
+++ b/typescript/study-array-map/package.json
@@ -11,5 +11,8 @@
     "ts"
   ],
   "author": "mnig",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "typescript": "^4.9.3"
+  }
 }
