--- a/my-components/package.json
+++ b/my-components/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/node": "^18.11.15",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
     "sass": "^1.56.2",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
