--- a/my-components/package.json
+++ b/my-components/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
     "@wangeditor/editor": "^5.1.23",
+    "axios": "^1.2.1",
     "element-plus": "^2.2.26",
     "lodash": "^4.17.21",
     "vue": "^3.2.45",
@@ -18,9 +19,11 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
+    "@types/mockjs": "^1.0.7",
     "@types/node": "^18.11.15",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "mockjs": "^1.1.0",
     "sass": "^1.56.2",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
