--- a/eggjs-base/egg-demo/package.json
+++ b/eggjs-base/egg-demo/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "egg": "^3",
-    "egg-scripts": "^2"
+    "egg-scripts": "^2",
+    "egg-view-ejs": "^3.0.0"
   },
   "devDependencies": {
     "egg-bin": "^5.13.4",
