--- a/eggjs-base/server/package.json
+++ b/eggjs-base/server/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "egg": "^3",
     "egg-mysql": "^3.4.0",
-    "egg-scripts": "^2"
+    "egg-scripts": "^2",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
     "egg-bin": "^5.13.4",
