引入静态资料及搭建基本结构

--- a/uni-app/hot-search/manifest.json
+++ b/uni-app/hot-search/manifest.json
@@ -50,9 +50,10 @@
     /* 快应用特有相关 */
     "mp-weixin" : {
         /* 小程序特有相关 */
-        "appid" : "",
+        "appid" : "wx2f5c892169297153",
         "setting" : {
-            "urlCheck" : false
+            "urlCheck" : false,
+            "checkSiteMap" : false
         },
         "usingComponents" : true
     },
