--- a/vue3-comp/vue3-basic/package.json
+++ b/vue3-comp/vue3-basic/package.json
@@ -15,9 +15,12 @@
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vitejs/plugin-vue": "^4.5.2",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.20.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
+    "vite-plugin-eslint": "^1.8.1",
     "vue-tsc": "^1.8.25"
   }
 }
