--- a/vue3/code/package.json
+++ b/vue3/code/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.1",
+    "element-plus": "^2.7.6",
     "mitt": "^3.0.1",
     "mockjs": "^1.1.0",
     "nanoid": "^5.0.3",
@@ -25,6 +26,8 @@
     "@vue/tsconfig": "^0.4.0",
     "npm-run-all2": "^6.0.6",
     "typescript": "~5.2.0",
+    "unplugin-auto-import": "^0.17.6",
+    "unplugin-vue-components": "^0.27.2",
     "vite": "^4.4.9",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^1.8.11"
