--- a/vue3/code/package.json
+++ b/vue3/code/package.json
@@ -16,6 +16,7 @@
     "mockjs": "^1.1.0",
     "nanoid": "^5.0.3",
     "pinia": "^2.1.7",
+    "sass": "^1.77.8",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
