--- a/vue-life-cycle/vue3/package.json
+++ b/vue-life-cycle/vue3/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "vue": "^3.2.47"
   },
   "devDependencies": {
